<resources>
    <string name="app_name">BottomNavProj</string>
    <string name="air">Air</string>
    <string name="agriculture">Agriculture</string>
    <string name="abc_123">ABC 123</string>
    <string name="abc_456">ABC 456</string>
    <string name="sample_img">Sample Img</string>
    <string name="info_edit_screen">Info Edit Screen</string>
    <string name="to_edit_info">To Edit Info</string>
    <string name="title">Title</string>
    <string name="distance">Distance</string>
    <string name="date">Date</string>
    <string name="enter_distance">Enter distance</string>
    <string name="enter_date">Enter date</string>
    <string name="save_record">Save Record</string>
    <string name="add_more_record">Add More Record</string>
    <string name="delete">Delete</string>
    <string name="animated_logo">animatedLogo</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="log_out">Log Out</string>
</resources>