<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.editinfo.EditInfoActivity"
    android:paddingHorizontal="16dp">
    <TextView
        android:id="@+id/edit_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_edit_screen"
        android:textSize="20sp"
        android:textColor="#FF0000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="100dp"
        />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_distance_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_distance"
        app:layout_constraintTop_toBottomOf="@+id/edit_info_title"
        android:layout_marginTop="24dp"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edit_date_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_date"
        app:layout_constraintTop_toBottomOf="@+id/edit_distance_input"
        android:layout_marginTop="8dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/edit_info_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edit_date_input"
        android:text="@string/save_record"
        android:layout_marginTop="24dp"
        android:background="#FF0000"
        android:textColor="@color/white"/>
</androidx.constraintlayout.widget.ConstraintLayout>